--- a/templates/stub.html
+++ b/templates/stub.html
@@ -1,8 +1,8 @@
- <!-- Extending the predefined project layout -->
+<!-- Extending the predefined project layout -->
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Greet" %}
+{% set project = "Stubby" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
