--- a/templates/stub.html
+++ b/templates/stub.html
@@ -2,11 +2,27 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+{% set project = "Jakub" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+        <div class="col-12">
+            <p>Hello, {{name}}!</p>
+        </div>
+        <div class="col-12">
+            <form action="/stub/" id="stub" method="POST" >
+                <label for="name">Type a greeting name?</label>
+                <input name="name" id="name">
+                <input type="submit" value="Greetings!">
+            </form>
+        </div>
+        <div class="col-12">
+            <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
+        </div>
+    </div>
+    <p>This is a test</p>
     <p>Tech Talk 1 - Body Stub</p>
 {% endblock %}
 
