--- a/templates/stub.html
+++ b/templates/stub.html
@@ -7,7 +7,26 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <p>Tech Talk 1 - Body Stub</p>
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+
+        <div class="col-12">
+            <p>Hello, {{fname}}!</p>
+        </div>
+
+        <div class="col-12">
+            <form action="/greet" id="greet" method="POST" >
+                <label for="fname">Type a greeting name?</label>
+                <input name="fname" id="fname">
+                <input type="submit" value="Greetings!">
+            </form>
+        </div>
+
+        <div class="col-12">
+            <img src="/static/assets/PythonFlask.jpeg" alt="Python Flask" style="height: 400px" >
+        </div>
+
+    </div>
+
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
