--- a/templates/kangaroos.html
+++ b/templates/kangaroos.html
@@ -4,7 +4,7 @@
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
 {% set project = "Kangaroos" %}
 {% set overview = "https://www.youtube.com/watch?v=qXU-4Dwkv2E" %}
-{% set scrumboard = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
+{% set scrumboard = "https://github.com/Reinhardtlotter/flask_portfolio/projects/1" %}
 {% set repo = "https://github.com/avabrooks/Python-Web-Portfolio-Series-Demo" %}
 {% set authors = "https://thesmack.nighthawkcodingsociety.com/digitalPortfolios/"  %}
 
