--- a/templates/stub.html
+++ b/templates/stub.html
@@ -2,12 +2,15 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "Stubby" %}
+{% set project = "brian" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
+    <p> Tech Talk 2 </p>
     <p>Tech Talk 1 - Body Stub</p>
+    <p>boi fu</p>
+<p>oo</p>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
