Added video embed to minilabs page.

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -15,6 +15,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
+            <a class="nav-link" href="/minilabs">Minilabs!</a>
         </div>
     </div>
 </nav>
