Added video embed to minilabs page.

--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -3,6 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Minilabs</title>
+    <style>
+        body {
+            background: white;
+        }
+
+        .sneaky {
+            width: 20%;
+            top: 50%;
+            position: relative;
+            left: 40%;
+            border-bottom: 5px white;
+            overflow: hidden;
+            animation: animate 5s linear forwards;
+        }
+
+        .sneaky h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
 <h1>Minilabs!</h1>
@@ -11,5 +30,12 @@
     <p>Just pretend we're running this website on a CERN mainframe in the 1980's.</p>
     <p>Please enjoy this video presentation by our team as a compensatory visual stimulus.</p>
     <iframe width="853" height="480" src="https://www.youtube.com/embed/kJKbsoaUph4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h2>Sneaky</h2>
+        <div class="sneaky">
+            <audio controls>
+                <source src="MysterySong1.mp3" type="audio/mpeg">
+            </audio>
+            <h1>I'm sneaky.</h1>
+        </div>
 </body>
 </html>
