--- a/templates/greet.html
+++ b/templates/greet.html
@@ -1,19 +1,36 @@
-<div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+<!-- Extending the predefined project layout -->
+{% extends "layouts/base.html" %}
 
-    <div class="col-12">
-        <p>Hello, {{name}}!</p>
+<!- This variable sets name of browser tab  -->
+{% set project = "Stubby" %}
+
+<!- This is a replacement block for Body in base.html -->
+{% block body %}
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+
+        <div class="col-12">
+            <p>Hello, {{name}}!</p>
+        </div>
+
+        <div class="col-12">
+            <form action="/greet" id="greet" method="POST" >
+                <label for="name">Type a greeting name?</label>
+                <input name="name" id="name">
+                <input type="submit" value="Greetings!">
+            </form>
+        </div>
+
+        <div class="col-12">
+            <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
+        </div>
+
     </div>
+    <!- Try building a new body here ->
+    <p>Tech Talk 1 - Body Stub</p>
+{% endblock %}
 
-    <div class="col-12">
-        <form action="/greet" id="greet" method="POST" >
-            <label for="name">Type a greeting name?</label>
-            <input name="name" id="name">
-            <input type="submit" value="Greetings!">
-        </form>
-    </div>
+<!- This is turning off birds background from base.html -->
+{% block background %}
+{% endblock %}
 
-    <div class="col-12">
-        <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
-    </div>
 
-</div>
