--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -14,6 +14,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
             <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
             <a class="nav-link" href={{ url_for('greet') }}>Greet</a>
+            <a class="nav-link" href={{ url_for('minilabs') }}>MiniLabs</a>
+
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
         </div>
