--- a/templates/stub.html
+++ b/templates/stub.html
@@ -7,6 +7,21 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
+    <div class="center-block" style="margin: 2% 5% 5%; text-align:left; font-family: gilroy,serif;">
+    <div class="col-12">
+        <p>Hello, {{name}}!</p>
+    </div>
+    <div class="col-12">
+        <form action="/greet" id="greet" method="POST" >
+            <label for="name">Type a greeting name?</label>
+            <input name="name" id="name">
+            <input type="submit" value="Greetings!">
+        </form>
+    </div>
+    <div class="col-12">
+        <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
+    </div>
+</div>
     <p>Tech Talk 1 - Body Stub</p>
 {% endblock %}
 
