--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -7,7 +7,7 @@
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
     <!- Try building a new body here ->
-    <p>https://youtu.be/UPD-ODdUVYg</p>
+    <p>Link to video 0= https://youtu.be/UPD-ODdUVYg</p>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
