--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 {% extends "layouts/base.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to index page -->
-{% set project = "Portfolio" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/details/Flask%20Portfolio%20Starter" %}
-{% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}
+{% set project = "Home" %}
+<!--% set overview = "https://nighthawkcodingsociety.com/projectsearch/details/Flask%20Portfolio%20Starter" %} also i took out a curly bracket in front of the first piece so add that-->
+<!--% set repo = "https://github.com/nighthawkcoders/flask_portfolio/" %}-->
