--- a/templates/sonakshi.html
+++ b/templates/sonakshi.html
@@ -13,7 +13,7 @@
         </div>
 
         <div class="col-12">
-            <form action="/greet" id="greet" method="POST" >
+            <form action="/sonakshi" id="greet" method="POST" >
                 <label for="name">Type a greeting name?</label>
                 <input name="name" id="name">
                 <input type="submit" value="Greetings!">
@@ -23,11 +23,8 @@
         <div class="col-12">
             <img src="/static/assets/PythonFlask.jpeg" style="height: 400px" >
         </div>
-
-    </div>
-    <!- Try building a new body here ->
-    <p>Tech Talk 1 - Body Stub</p>
 {% endblock %}
+
 
 <!- This is turning off birds background from base.html -->
 {% block background %}
