--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -33,9 +33,16 @@
     <h2>Sneaky</h2>
         <div class="sneaky">
             <audio controls>
-                <source src="MysterySong1.mp3" type="audio/mpeg">
+                <source src="/home/valerie/Downloads/MysterySong1.mp3" type="audio/mpeg">
             </audio>
-            <h1>I'm sneaky.</h1>
+            <h1>Guess the song! #1</h1>
+            <form>
+                <input type="radio" name="choice" value="Nine Inch Nails - Came Back Haunted"> Nine Inch Nails - Came Back Haunted
+                <input type="radio" name="choice" value="Wrong"> Wrong
+                <input type="radio" name="choice" value="Wrong"> Wrong
+                <input type="radio" name="choice" value="Wrong"> Wrong
+            </form>
+            <button>Answer</button>
         </div>
 </body>
 </html>
