--- a/templates/aboutus/aboutus.html
+++ b/templates/aboutus/aboutus.html
@@ -1,5 +1,5 @@
 <!-- Extending the project layout, as this file will do minor customizations -->
-{% extends "layouts/project.html" %}
+{% extends "layouts/base.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
 {% set project = "About us" %}
