--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -23,14 +23,17 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
             <a class="nav-link" href="/minilabs">Minilabs!</a>
-    <a class="nav-item dropdown">
+            <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href={{ url_for('aboutus') }} data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">
                     About us!
                 </a>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                     <a class="dropdown-item" href="/bria">Bria</a>
+                    <a class="dropdown-item" href="/riya">Riya</a>
+                    <a class="dropdown-item" href="/valerie">Valerie</a>
+                    <a class="dropdown-item" href="/sreeja">Sreeja</a>
                 </div>
-            </a>
+            </li>
         </div>
     </div>
 </nav>
