--- a/templates/Game.html
+++ b/templates/Game.html
@@ -9,19 +9,22 @@
 {% set authors = "https://nighthawkcodingsociety.com/projectsearch/details/Hawkers%20Tweet" %}
 
 <!-- Setting up a block replacement to customize background to BIRDS -->
+{% block body %}
+
+    <!DOCTYPE html>
+    <html>
+    <title>W3.CSS</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <body>
+
+    <div class="w3-container w3-sand">
+        <h2>Instructions</h2>
+        <p>Welcome to the song association game! This is the page where we give you all the directions on how to play this fantabulous musical game that rapid fire tests your musical knowledge! First, select a genre (countyr, pop, or rap). Then cick your game mode (easy - 25 sec, medium - 15 sec, hard - 8 sec) After that click ready, and you have to finish the lyric of the song given. You can keep playing until you run out of songs, but be careful! Your progress doesnt get saved so if you ae happy with you score, screnshot it and share it with some friends :) </p>
+    </div>
+
+
+{% endblock %}
+
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.net.min.js') }}"></script>
-    <script>
-        VANTA.NET({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
 {% endblock %}
