Added in the 4x4 gridbox (the lines for the box aren't showing up) Changed the backround color for the mini labs page

--- a/templates/minilabs.html
+++ b/templates/minilabs.html
@@ -8,7 +8,7 @@
     <title>Minilabs</title>
     <style>
         body {
-            background: #000000;
+            background: #a2cf9f;
         }
 
         .sneaky {
@@ -28,6 +28,28 @@
 </head>
 <body>
 <h1>Minilabs!</h1>
+<div class="row">
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="w-100"></div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="w-100"></div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="w-100"></div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+    <div class="col">col</div>
+</div>
+</div>
     <h2>Video Journal</h2>
     <p>Unfortunately, due to severe budget cuts, we cannot afford CSS for this page.</p>
     <p>Just pretend we're running this website on a CERN mainframe in the 1980's.</p>
