--- a/templates/about.html
+++ b/templates/about.html
@@ -2,11 +2,8 @@
 {% extends "layouts/project.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to walruses -->
-{% set project = "Walruses" %}
-{% set overview = "https://nighthawkcodingsociety.com/projectsearch/dash" %}
-{% set scrumboard = "https://github.com/ridhimainukurti/group-2/projects/1" %}
-{% set repo = "https://github.com/ridhimainukurti/group-2" %}
-{% set authors = "https://wasc.nighthawkcodingsociety.com/about"  %}
+{% set project = "About" %}
+
 
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
