--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,8 @@
 {% extends "layouts/project.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
-{% set project = "Kangaroos" %}
-{% set overview = "https://www.youtube.com/watch?v=qXU-4Dwkv2E" %}
-{% set scrumboard = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
-{% set repo = "https://github.com/avabrooks/Python-Web-Portfolio-Series-Demo" %}
-{% set authors = "https://thesmack.nighthawkcodingsociety.com/digitalPortfolios/"  %}
+{% set project = "Home" %}
+
 
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
