--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -10,12 +10,12 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('index') }}>Portfolio</a>
-            <a class="nav-link" href={{ url_for('kangaroos') }}>Kangaroos</a>
-            <a class="nav-link" href={{ url_for('walruses') }}>Walruses</a>
-            <a class="nav-link" href={{ url_for('hawkers') }}>Hawkers</a>
+            <a class="nav-link" href={{ url_for('home') }}>Home</a>
+            <a class="nav-link" href={{ url_for('continents') }}>Continents</a>
+            <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
             <a class="nav-link" href={{ url_for('saumya') }}>Saumya</a>
-            <a class="nav-link" href={{ url_for('minilabs') }}>MiniLabs</a>
+            <a class="nav-link" href={{ url_for('concepts') }}>Concepts</a>
             <a class="nav-link" href={{ url_for('kashish') }}>Kashish</a>
 
             <!-- stub is shown using the name of the route -->
