--- a/templates/home.html
+++ b/templates/home.html
@@ -10,16 +10,17 @@
     <head>
         <style>
             body {
-                background-color: lightblue;
+                background-image: url("https://motionarray.imgix.net/preview-48205qaA5d1EZMt_0009.jpg");
             }
 
             h1 {
-                color: Black;
+                color: black;
                 text-align: center;
             }
 
             p {
-                font-family: verdana;
+                color: black;
+                font-family: "Comic Sans MS";
                 font-size: 20px;
             }
         </style>
