--- a/templates/concepts.html
+++ b/templates/concepts.html
@@ -3,13 +3,41 @@
 
 <!- This variable sets name of browser tab  -->
 {% set project = "Stubby" %}
-
-<!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <p>Link to video 0= https://youtu.be/UPD-ODdUVYg</p>
-{% endblock %}
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <p class="text-center">MiniLabs</p>
+            <blockquote class="blockquote text-center">
+            <h1 class="display-1">Mini-Labs</h1>
+            <table>
+                <thead>
+                <p class="text-lg-left">Tech Talk/Video 0</p>
+        </div>
+        <p class="text-lg-left">Greet MiniLab</p>
+    </div>
+        <p class="text-lg-left">WireFrames</p>
+    </div>
+        <table>
+            <thead>
+        <p class="text-right">Brainwrite</p>
 
+    </div>
+    <div class = "form_row"
+    <div class="col-7">
+        <input type="text" class="form-control" placeholder="Wireframes">
+    </div>
+    <div class="col">
+        <input type="text" class="form-control" placeholder="Brainwritee">
+    </div>
+    <div class="col">
+        <input type="text" class="form-control" placeholder="TPT3">
+    </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
 <!- This is turning off birds background from base.html -->
 {% block background %}
 {% endblock %}
+
