--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -29,7 +29,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);
+            background-image: url("https://docs.google.com/drawings/d/e/2PACX-1vRQ-fJHr5frWNYkTrt-XxVVvpFlDyb15c5hXOAbYWEG_xtO23QkqaaLjylaAQfGDcXK7jb9IPs1rsSU/pub?w=1392&h=781");
             color: var(--white);
         }
 
@@ -95,7 +95,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .row{
             margin: auto;
         }
-
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
