--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -21,7 +21,6 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             --black: black;
             --grey: grey;
         }
-
         html, body{
             margin: 0;
             height: 100%;
@@ -31,6 +30,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             -o-animation: fadein 2s; /* Opera */
             background-color: var(--grey);
             color: var(--white);
+
+            background-image: url('');
         }
 
         .dark-mode {
