--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -23,6 +23,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <!-- stub is shown using the name of the route -->
             <a class="nav-link" href="/stub">Stub</a>
             <a class="nav-link" href="/minilabs">Minilabs!</a>
+            <a class="nav-link" href="/binary/">Binary!</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href={{ url_for('aboutus') }} data-bs-toggle="dropdown" aria-expanded="false" id="dropdownMenuButton1" type="button">
                     About us!
