--- a/templates/binary.html
+++ b/templates/binary.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 
-
 <!-- Search for all the Hack: below for hack-a-thon and mini-lab requirements -->
 
 <!-- Hack: Build form to drive bit size dynamic updates
@@ -13,8 +12,8 @@
 <!-- Hack: Set bulbs and pass as variables via Python render_template
            add new images (ie PNGs) to project -->
 <!-- use your PNGs as default -->
-{% set imgBulbOn = "/static/assets/bulb_on.gif" %}
-{% set imgBulbOff = "/static/assets/bulb_off.png" %}
+{% set imgBulbOn = "/static/assets/goodgoose.jpeg" %}
+{% set imgBulbOff = "/static/assets/goose.jpeg" %}
 {% set msgTurnOn = "Turn On" %}
 {% set msgTurnOff = "Turn Off" %}
 
@@ -131,10 +130,10 @@
                     </tr>
                     <tr>
                         <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
-                        <td id="binary">00000000</td>
-                        <td id="octal">0</td>
-                        <td id="hexadecimal">0</td>
-                        <td id="decimal">0</td>
+                        <td id="binary">00001000</td>
+                        <td id="octal">10</td>
+                        <td id="hexadecimal">8</td>
+                        <td id="decimal">8</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
