--- a/templates/binary.html
+++ b/templates/binary.html
@@ -42,6 +42,8 @@
              DOM assignment by converting decimal https://www.w3schools.com/jsref/jsref_fromcharcode.asplook
              below ASCII for more ideas of where to make changes
              */
+            document.getElementById('ascii').innerHTML = parseInt(binary, 2).toString(36);
+
         }
 
         // algorithm to convert decimal to base using division and remainder
@@ -125,15 +127,17 @@
                         <th>Octal</th>
                         <th>Hexadecimal</th>
                         <th>Decimal</th>
+                        <th>Ascii</th>
                         <!-- Hack: display ASCII label for printable character(s)  -->
                         <th>Minus</th>
                     </tr>
                     <tr>
                         <td><button type="button" id="add1" onclick="add(1)">+1</button></td>
-                        <td id="binary">00001000</td>
-                        <td id="octal">10</td>
-                        <td id="hexadecimal">8</td>
-                        <td id="decimal">8</td>
+                        <td id="binary">00000000</td>
+                        <td id="octal">0</td>
+                        <td id="hexadecimal">0</td>
+                        <td id="decimal">0</td>
+                        <td id="ascii">0</td>
                         <!-- Hack: display ASCII printable character(s)  -->
                         <td><button type="button" id="sub1" onclick="add(-1)">-1</button></td>
 
