--- a/templates/concepts.html
+++ b/templates/concepts.html
@@ -7,33 +7,43 @@
 <div class="container">
     <div class="row">
         <div class="col-12">
-            <p class="text-center">MiniLabs</p>
-            <blockquote class="blockquote text-center">
-            <h1 class="display-1">Mini-Labs</h1>
-            <table>
-                <thead>
-                <p class="text-lg-left">Tech Talk/Video 0</p>
+        <blockquote class="blockquote text-center">
+        <h1 class="display-1">Mini-Labs</h1>
+         <table>
+         <thead>
+    <blockquote class="blockquote text-center">
+              <input type="button" class="btn btn-info" value="Brainwrite" onclick=" relocate_home()">
+
+        <script>
+            function relocate_home()
+            {
+                location.href = "https://docs.google.com/document/d/1Bvd6YmqO9-f4q_5PR7y2-Fw-I1BUDEP6Q7sveVjn2Pg/edit?usp=sharing";
+            }
+        </script>
+        <a href="https://docs.google.com/document/d/13oDynZriMOZLJGRZ1XF9IGquwItVnpF7PiXeV7OK-YM/edit?usp=sharing" >
+            <button type="button" class="btn btn-info">Wireframes</button>
+        </a>
+         <button type="button" class="btn btn-primary">TPT3</button>
+        <div class="container bg-light">
+        <div class="col-md-12 text-center">
+           </div>
         </div>
-        <p class="text-lg-left">Greet MiniLab</p>
     </div>
-        <p class="text-lg-left">WireFrames</p>
-    </div>
-        <table>
-            <thead>
-        <p class="text-right">Brainwrite</p>
+    </body>
+        <blockquote class="blockquote text-center">
+            <button type="button" class="btn btn-primary">Greet</button>
+            <a href="https://youtu.be/UPD-ODdUVYg" >
+                <button type="button" class="btn btn-info">Video/Journal 0</button>
+            </a>
+
+
+            </script>
+        <div class="container bg-light">
+        <div class="col-md-12 text-center">
+
+        </div>
 
     </div>
-    <div class = "form_row"
-    <div class="col-7">
-        <input type="text" class="form-control" placeholder="Wireframes">
-    </div>
-    <div class="col">
-        <input type="text" class="form-control" placeholder="Brainwritee">
-    </div>
-    <div class="col">
-        <input type="text" class="form-control" placeholder="TPT3">
-    </div>
-        </div>
     </div>
 </div>
 {% endblock %}
