added continents names

--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -24,28 +24,21 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
                     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">Continents
                         <span class="caret"></span></button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
-                        /* Dropdown Button */
-                        .dropbtn {
-                        background-color: #04AA6D;
-                        color: white;
-                        padding: 16px;
-                        font-size: 16px;
-                        border: none;
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-                        <li role="presentation" class="divider"></li>
-                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Asia</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Africa</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">North America</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">South America</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Antartica</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Europe</a></li>
+                        <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Australia</a></li>
                     </ul>
                 </div>
             </div>
-
             </body>
             </html>
-
             <a class="nav-link" href={{ url_for('about') }}>About</a>
             <a class="nav-link" href={{ url_for('sonakshi') }}>Sonakshi</a>
-            <a class="nav-link" href={{ url_for('saumya') }}>Saumya</a>
+            <a class="nav-link" href={{ url_for('saumya') }}>Saumya</a>`
             <a class="nav-link" href={{ url_for('concepts') }}>Concepts</a>
             <a class="nav-link" href={{ url_for('kashish') }}>Kashish</a>
 
