--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -10,6 +10,7 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
         <div class="navbar-nav">
             <!-- url_for is a Jinja2 pre-processor that finds route from function name (def) -->
             <a class="nav-link" href={{ url_for('home') }}>Home</a>
+            <a class="nav-link" href={{ url_for('binary') }}>Binary</a>
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
