--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,8 +13,13 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
 
 <head>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         :root{
             --white: whitesmoke;
@@ -95,6 +100,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .row{
             margin: auto;
         }
+        .navbar-custom .navbar-brand,
+        .navbar-custom .navbar-text {
+            color: var(--grey);
+        }
+
 
     </style>
 
@@ -106,61 +116,47 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% include "layouts/navbar.html" %}
 
 {% block body %}
-<div class="container-fluid">
-    <div class="row justify-content-end" style="padding: 2%;">
-        <div class="col-2" style="text-align: right;">
-            {% block info %}
-                <!-- notice jinja style variables used in href's -->
-                <a><h5>{{basename}}</h5></a>
-                <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
-                <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
-                <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
-            {% endblock %}
+    <div class="container-fluid">
+        <div class="row justify-content-end" style="padding: 2%;">
+            <div class="col-2" style="text-align: right;">
+                {% block info %}
+                    <!-- notice jinja style variables used in href's -->
+                    <a><h5>{{basename}}</h5></a>
+                    <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
+                    <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
+                    <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
+                {% endblock %}
+            </div>
+        </div>
+
+        <div class="product" style="margin-top: 2%;">
+            <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
+
+                <div class="col-8" >
+                    <h1>{{ project }} Project</h1>
+                </div>
+
+            </div>
+
+            <div class="row" style="padding-left: 10%;">
+                {% block links %}
+                    <div class="col-3">
+                        <a href="{{ overview }}" class="btn">Overview</a>
+                    </div>
+
+                    <div class="col-3">
+                        <a href="{{ repo }}" class="btn">Repository</a>
+                    </div>
+                {% endblock %}
+            </div>
+
         </div>
     </div>
-
-    <div class="product" style="margin-top: 2%;">
-        <div class="row" style="padding: 10%; padding-top: 0%; padding-bottom: 5%;">
-
-            <div class="col-8" >
-                <h1>{{ project }} Project</h1>
-            </div>
-
-        </div>
-
-        <div class="row" style="padding-left: 10%;">
-            {% block links %}
-            <div class="col-3">
-                <a href="{{ overview }}" class="btn">Overview</a>
-            </div>
-
-            <div class="col-3">
-                <a href="{{ repo }}" class="btn">Repository</a>
-            </div>
-            {% endblock %}
-        </div>
-
-    </div>
-</div>
 {% endblock %}
 
 </body>
 
-{% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
-{% endblock %}
+
+
 
 </html>
