--- a/templates/layouts/project.html
+++ b/templates/layouts/project.html
@@ -1,6 +1,7 @@
 {% extends "layouts/base.html" %}
 <!-- Custom block for standardizing Project Data-->
 {% block links %}
+    <body style="background-color: #008080">
     <div class="col-3">
         <a href="{{ overview }}" class="btn">Overview</a>
     </div>
@@ -17,5 +18,5 @@
         <a href="{{ authors }}" class="btn">Authors</a>
     </div>
 {% endblock %}
-
+</body>
 </html>
