--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,6 +16,8 @@ This HTML is setup as a fragment allowing it to be "included" by other HTML file
             <a class="nav-link" href={{ url_for('saumya') }}>Saumya</a>`
             <a class="nav-link" href={{ url_for('concepts') }}>Concepts</a>
             <a class="nav-link" href={{ url_for('kashish') }}>Kashish</a>
+            <a class="nav-link" href="/stub">Stub</a>
+
             <html>
             <head>
                 <meta name="viewport" content="width=device-width, initial-scale=1">
