--- a/templates/kangaroos.html
+++ b/templates/kangaroos.html
@@ -2,7 +2,7 @@
 {% extends "layouts/project.html" %}
 
 <!-- Setting up variables to customize "project" details to be specific to kangaroos -->
-{% set project = "Kangaroos" %}
+{% set project = "Theme Pages" %}
 {% set overview = "https://www.youtube.com/watch?v=qXU-4Dwkv2E" %}
 {% set scrumboard = "https://github.com/Reinhardtlotter/flask_portfolio/projects/1" %}
 {% set repo = "https://github.com/avabrooks/Python-Web-Portfolio-Series-Demo" %}
@@ -10,8 +10,8 @@
 
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.halo.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='') }}"></script>
+    <script src="{{ url_for('static', filename='') }}"></script>
     <script>
         VANTA.HALO({
             el: "body",
