--- a/templates/walruses.html
+++ b/templates/walruses.html
@@ -10,8 +10,8 @@
 
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.rings.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='') }}"></script>
+    <script src="{{ url_for('static', filename='') }}"></script>
     <script>
         VANTA.RINGS({
             el: "body",
