--- a/templates/stub.html
+++ b/templates/stub.html
@@ -2,15 +2,16 @@
 {% extends "layouts/base.html" %}
 
 <!- This variable sets name of browser tab  -->
-{% set project = "brian" %}
+{% set project = "Stubby" %}
 
 <!- This is a replacement block for Body in base.html -->
 {% block body %}
-    <!- Try building a new body here ->
-    <p> Tech Talk 2 </p>
-    <p>Tech Talk 1 - Body Stub</p>
-    <p>boi fu</p>
-<p>oo</p>
+<!- Try building a new body here ->
+<p> Tech Talk 2 </p>
+<p>Tech Talk 1 - Body Stub</p>
+<p>Reinhardt</p>
+<br>
+<p>Lotter</p>
 {% endblock %}
 
 <!- This is turning off birds background from base.html -->
