--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,8 +13,13 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 {% set youtube = "https://www.youtube.com/channel/UClIKOsDS5dsfzFA3zveDT3Q?view_as=subscriber" %}
 
 <head>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         :root{
             --white: whitesmoke;
@@ -95,6 +100,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         .row{
             margin: auto;
         }
+        .navbar-custom .navbar-brand,
+        .navbar-custom .navbar-text {
+            color: var(--grey);
+        }
+
 
     </style>
 
@@ -110,11 +120,11 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     <div class="row justify-content-end" style="padding: 2%;">
         <div class="col-2" style="text-align: right;">
             {% block info %}
-                <!-- notice jinja style variables used in href's -->
-                <a><h5>{{basename}}</h5></a>
-                <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
-                <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
-                <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
+            <!-- notice jinja style variables used in href's -->
+            <a><h5>{{basename}}</h5></a>
+            <a href={{github}} target="_blank"><i class="fa fa-github"></i></a>
+            <a href={{youtube}} target="_blank"><i class="fa fa-youtube-play"></i></a>
+            <a href={{twitter}} target="_blank"><i class="fa fa-twitter"></i></a>
             {% endblock %}
         </div>
     </div>
@@ -147,20 +157,20 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
-    <script src="{{ url_for('static', filename='three.r119.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='vanta.birds.min.js') }}"></script>
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
+<script src="{{ url_for('static', filename='') }}"></script>
+<script src="{{ url_for('static', filename='') }}"></script>
+<script>
+    VANTA.BIRDS({
+        el: "body",
+        mouseControls: true,
+        touchControls: true,
+        gyroControls: false,
+        minHeight: 200.00,
+        minWidth: 200.00,
+        scale: 1.00,
+        scaleMobile: 1.00
+    })
+</script>
 {% endblock %}
 
 </html>
