--- a/templates/layouts/navbar.html
+++ b/templates/layouts/navbar.html
@@ -16,7 +16,7 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarModel" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    My Personal pages
+                    Personal pages
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" style="color:skyblue" href="/greet">Greet/About Me</a>
