--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -29,12 +29,12 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 
         html, body{
             margin: 0;
-            height: 100%;
+            height: 0%;
             animation: fadein 2s;
             -moz-animation: fadein 2s; /* Firefox */
             -webkit-animation: fadein 2s; /* Safari and Chrome */
             -o-animation: fadein 2s; /* Opera */
-            background-color: var(--grey);
+            background-color: var(--deepskyblue);
             color: var(--white);
         }
 
@@ -44,7 +44,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
         }
 
         h1{
-            font-size: 5em;
+            font-size: 3em;
         }
 
         a {
@@ -84,7 +84,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
             transition: all .2s;
             position: absolute;
             color: white;
-            font-size: 2.5em;
+            font-size: 3em;
         }
 
         .btn:hover {
@@ -109,7 +109,8 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
     </style>
 
     <title>{{ basename }} | {{ project }} </title>
-
+    {% block meta %}
+    {% endblock %}
 </head>
 
 <body>
@@ -157,20 +158,7 @@ This HTML is setup as as a Jinja2 layout, coders use layouts for:
 </body>
 
 {% block background %}
-    <script src="{{ url_for('static', filename='') }}"></script>
-    <script src="{{ url_for('static', filename='') }}"></script>
-    <script>
-        VANTA.BIRDS({
-            el: "body",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00
-        })
-    </script>
+<body style="background-color:deepskyblue;">
+</body>
 {% endblock %}
-
 </html>
